--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     ext {
         compose_version = '1.1.0-beta01'
+        // add the hilt and room versions below
+        hilt_version = '2.40.2'
+        room_version = '2.4.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
