coroutines and room  implementations

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     // the below two to this part of the code
     id 'kotlin-kapt'
-    id 'com.google.dagger.hilt.android' version '2.42' apply false
+//    id 'com.google.dagger.hilt.android' version '2.42' apply false
 }
 
 android {
