--- a/build.gradle
+++ b/build.gradle
@@ -7,25 +7,22 @@ buildscript {
     }
 
     repositories {
-        // other repositories...
+        google()
         mavenCentral()
     }
     dependencies {
         // other plugins...
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
-    }
-
-    dependencies {
-        classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
+
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.31' apply false
